Fix to vertical alignment of nav in smallest mode

--- a/style-0000.css
+++ b/style-0000.css
@@ -17,6 +17,7 @@ nav ul {
 
 nav ul li {
     flex-grow: 1;
+    margin: 0.25rem 0;
 }
 
 nav ul li:nth-child(3) {
